--- a/AJAX/index/index2.html
+++ b/AJAX/index/index2.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
+    <div class="shopping-cart"> Total $0</div>
     <div class="item-box" data-price="199">
         <img src="/img/diving.jpg">
         <div class="item-tittle">Buceo</div>
