--- a/JQuery/index/index.html
+++ b/JQuery/index/index.html
@@ -8,9 +8,38 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    <div id="example">
-        <button class="switch">Click me</button>
-    </div>
     <div id="result"></div>
+    <div class="form-container">
+        <form id="your-form">
+            <div class="form-row">
+                <label>Name</label>
+                <input type="text" id="name" name="name">
+            </div>
+            <div class="form-row">
+                <label>Address</label>
+                <input type="text" id="address" name="address">
+            </div>
+            <div class="form-row">
+                <label>Age</label>
+                <input type="text" id="age" name="age">
+            </div>
+            <div class="form-row">
+                <label>Any pets?</label>
+                <input type="checkbox" id="hasPets" name="hasPets">
+            </div>
+            <div class="form-row" id="pets-row">
+                <label>Pet</label>
+                <select type="select" name="pet" id="pet">
+                    <option value="">-</option>
+                    <option value="Dog">Dog</option>
+                    <option value="Cat">Cat</option>
+                </select>
+                <div id="pet-feedback"></div>
+            </div>
+            <input type="submit" value="Save">
+        </form>
+    </div>
+    <script src="/JQuery/node_modules/jquery/dist/jquery.js"></script>
+    <script src="/JQuery/js/script.js"></script>
 </body>
 </html>
